2019-04-12  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1248
	
	* src/constants.h:  Added h_bar for h/2pi and two_pi for 2pi and some functions
	
	* src/linemixing.cc,h:  Fix some units and question some others.  Now I think
	the ARTS C++ re-implementation of Relmat F90 is very close to working
	(visually similar y-values as LBLRTM has)
	
	* src/linerecord.h:  Added some comparison functions and a way to get the 
	dipole moment.
	
	* src/m_linemixing.cc:  Added SetBandIdentifiersFromLines as a method.  Fixed
	abs_lines_per_bandFromband_identifiers since it did not work.  Updated the
	test-function TestLineMixing to be similar to LBLRTM.  It seems to be, but
	I might be off by some rescaling factor.
	
	* src/methods.cc:  Added said method.  Is the description good enough?
	
	* src/quantum.cc,h:  Changed the comparisons around because somehow a check
	failed.  I think they are doing the same thing still, but it is clearer for
	me to read this version, and the results look good now.

2019-04-11  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1247
	
	* controlfiles/artscomponents/nlte/TestPopulationDensityNLTE_lineshape.arts:
	Updated naming of input for selecting NLTE type
	
	* src/absorption.cc:  Updated interface to temperature derivatives in
	Linefunctions
	
	* src/constants.h:  Added several constants used elsewhere in the code
	
	* src/jacobian.cc,h: Updated do_vmr_jacobian to be easier to read out from
	
	* src/linefunctions.cc,h: Updated to use the Constant namespace. Also
	simplified interface to the line strength calculators. Also udpated Doppler
	derivative
	
	* src/linemixing.cc,h: Named the interface to the internalized relmat
	calculator.  Doing some more tests on this atm but by workstation cannot
	handle the ram-usage of some operations so that code is on another machine.
	TBCS
	
	* src/linerecord.cc,h: Removed dual line shape specifications.  Also removed
	Index interface to this so no longer necessary to have "END" as enum 
	variable
	