@@ -21,8 +21,9 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-8
+            - gfortran-8
       env:
-        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && WITH_FORTRAN=1"
+        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && FC=gfortran-8 && WITH_FORTRAN=1"
     - name: GCC 4.9 w/ Fortran
       os: linux
       addons:
@@ -31,21 +32,20 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
+            - gfortran-4.9
       env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 &&  WITH_FORTRAN=1"
+         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && FC=gfortran-4.9 && WITH_FORTRAN=1"
 
 before_install:
   - eval "${MATRIX_EVAL}"
+  - export FC
   - sudo apt-get update
-  - sudo apt-get install -y
-    zlib1g-dev libblas-dev liblapack-dev libfftw3-dev gfortran
+  - sudo apt-get install -y zlib1g-dev libblas-dev liblapack-dev libfftw3-dev
 
 script:
   - mkdir -p build
   - cd build
-  - cmake $([[ ${ENABLE_FORTRAN} -eq 1 ]] &&
-            echo -n '-DCMAKE_Fortran_COMPILER=gfortran')
-    -DENABLE_FORTRAN=${WITH_FORTRAN} -DENABLE_C_API=1 -DTEST_JOBS=2 ..
+  - cmake -DENABLE_FORTRAN=${WITH_FORTRAN} -DENABLE_C_API=1 -DTEST_JOBS=2 ..
   - make -j2 arts arts_api
   - make check
 
